# tray-indicator

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/simple/: Cargo.toml  build.rs
examples/simple/src/: main.rs
src/: lib.rs  menu.rs  tray.rs
src/platform/: mod.rs  popup_menu.rs
src/platform/linux/: mod.rs  tray.rs
src/platform/windows/: error.rs  icon.rs  mod.rs  notify_icon.rs  popup_menu.rs  string.rs  util.rs
