[package]
name = "tray-indicator"
description = "A simple tray-icon/app-indicator crate"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmionSky/tray-indicator"
keywords = ["tray", "appindicator", "notify-icon"]
categories = ["gui"]

[dependencies]
thiserror = "1.0.0"

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
]

[workspace]
members = [".", "examples/simple"]

[workspace.dependencies]
tray-indicator.path = "."
