[package]
name = "tray-indicator"
description = "A simple tray-icon/app-indicator crate"
version = "0.3.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmionSky/tray-indicator"
keywords = ["tray", "appindicator", "notify-icon"]
categories = ["gui"]

[features]
dpiaware = ["windows-sys/Win32_UI_Controls"]

[dependencies]
thiserror = "1.0.0"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_Graphics_Gdi",
]

[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.2.1"
ico = "0.3.0"

[workspace]
members = [".", "examples/simple"]

[workspace.dependencies]
tray-indicator.path = "."
