[package]
name = "tray-indicator"
description = "A simple tray-icon crate"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmionSky/tray-indicator"
keywords = ["tray", "appindicator", "notify-icon"]
categories = ["gui"]
exclude = ["examples"]

[features]
dpiaware = ["windows-sys/Win32_UI_Controls"]

[dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_Graphics_Gdi",
]
